--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -17,7 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/GreenCareTheme"
         tools:targetApi="31">
-
+        <activity
+            android:name=".PredictionHistory"
+            android:exported="false" />
         <activity
             android:name=".UserProfilePage"
             android:exported="false" />
@@ -25,17 +26,16 @@
             android:name=".ClarificationPage"
             android:exported="false" />
         <activity
-            android:name=".RegisterActivity"
+            android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".RegisterActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
