--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/GreenCareTheme"
         tools:targetApi="31">
         <activity
+            android:name=".ResultScreen"
+            android:exported="false" />
+        <activity
             android:name=".PredictionHistory"
             android:exported="false" />
         <activity
@@ -36,6 +39,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
