OpenCV library Added to the project.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/GreenCareTheme"
         tools:targetApi="31">
         <activity
+            android:name=".Main.HistoryPageActivity"
+            android:exported="false" />
+        <activity
             android:name=".ResultScreen"
             android:exported="false" />
         <activity
@@ -26,16 +29,14 @@
             android:name=".UserProfilePage"
             android:exported="false" />
         <activity
-            android:name=".ClarificationPage"
+            android:name=".Main.ConfiguratorPageActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".Main.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".RegisterActivity"
+            android:name=".Main.RegisterActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
