--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,16 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
+
 }
 
 android {
     namespace 'com.example.greencare'
     compileSdk 33
 
-    defaultConfig {
+
+
+            defaultConfig {
         applicationId "com.example.greencare"
         minSdk 24
         targetSdk 33
@@ -36,7 +39,22 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth:21.2.0'
     implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation project(path: ':openCVLibrary343')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.karumi:dexter:6.2.3'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+
+    implementation 'org.tensorflow:tensorflow-lite:2.12.0'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.karumi:dexter:6.2.3'
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+    implementation 'com.google.firebase:firebase-auth:21.2.0'
+    implementation 'com.google.firebase:firebase-firestore:24.4.5'
+    implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation 'com.google.firebase:firebase-storage:20.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+
 }
